Fix navbar display, it was not centered on desktop+ screens

--- a/src/Nacara.Layout.Standard/scss/components/nacara-navbar.scss
+++ b/src/Nacara.Layout.Standard/scss/components/nacara-navbar.scss
@@ -20,13 +20,28 @@ $nacara-navbar-menu-border: 1px solid $navbar-item-active-background-color !defa
     // Make sure the .navbar.container has enough space around it
     // to display correctly on all display
     & >.container {
-        margin-left: 1rem;
-        margin-right: 1rem;
-
         // Mimic Bulma behavior with our own value
         // Bulma: use -0.75rem
         .navbar-menu {
             margin-right: -1rem;
+        }
+    }
+
+    @include desktop {
+        // Make sure the .navbar.container has enough space around it
+        // to display correctly on all display
+        & >.container {
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    @include touch {
+        // Make sure the .navbar.container has enough space around it
+        // to display correctly on all display
+        & >.container {
+            margin-left: 1rem;
+            margin-right: 1rem;
         }
     }
 
